--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Cécile Ung - Marketing & Communication</title>
+		<title>Cécile Ung - Marketing, Communication & Commercial</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Cécile Ung</h1>
-							<p>Marketing & Communication</p>
+							<p>Marketing, Communication & Commercial</p>
 						</div>
 
 					<!-- Nav -->
@@ -61,7 +61,7 @@
 
 							<header>
 								<h2 class="alt">
-									Bonjour! Je m'appelle <strong>Cécile</strong>, à la recherche d'une alternance dans le Marketing et Communication. <br />
+									Bonjour! Je m'appelle <strong>Cécile</strong>, spécialisée dans le Marketing, Communication et Commercial.<br />
 								</h2><br />
 							</header>
 
