--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Cécile Ung</h1>
-							<p>Marketing, Communication & Commercial</p>
+							<p>Marketing, Communication</p><p>& Commercial</p>
 						</div>
 
 					<!-- Nav -->
